# SynchroLight

./: .gitignore  CMakeLists.txt  Target_1_sources_list.cmake  commonLibs.lnk  debug_sources_list.cmake  gcc_stm32.cmake  git_sha_string.h  master_target_debug.cmake  master_target_release.cmake  master_v2_target_debug.cmake  master_v2_target_release.cmake  readme  readme.md  release_sources_list.cmake  script_add_git_hash.sh  slave_retranslator_target_debug.cmake  slave_retranslator_target_release.cmake  slave_target_debug.cmake  slave_target_release.cmake  synchroLight_slave_debug_sources_list.cmake  synchroLight_slave_release_sources_list.cmake
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.vscode.in/: settings.json
.vscode.old/: c_cpp_properties.json
BOM/: Master_final.xlsx  Slave_final.xlsx  synchroLight_master.bat  synchroLight_slave.bat  сисок изменений.xlsx
CMSIS/: core_cm3.c  startup_stm32f10x_md.s
Hdr/: buttons.h  display_kingbright.h  display_kingbright_74hc.h  include.h  include_master.h  low_level0.h  low_level0_master.h  low_level0_master_v2.h  low_level0_slave.h  uart_conf.h  var.h  var_master.h  var_slave.h
Objects/: adclib.d  bitmap.crf  bitmap.d  buttons.crf  core_cm3.crf  display_kingbright.crf  display_kingbright.d  dprintf.d  effect_processor.crf  endianes.crf  fatfs_diskio_sdcard_spi.crf  filetransfer.d  led_maping.crf  ledmap.crf  ledmap.d  lightControl-DESKTOP-JA61J2Q-2_Target 1.dep  lightControl.axf  lightControl.build_log.htm  lightControl.htm  lightControl_master.hex  lightControl_master.htm  lightControl_release.dep  misc.crf  player.crf  randomizer.crf  rcc.crf  rf_parser.crf  scen_memory.crf  spi_bitbang.crf  stm32f10x_adc.crf  stm32f10x_crc.crf  stm32f10x_gpio.crf  stm32f10x_iwdg.crf  stm32f10x_rcc.crf  stm32f10x_spi.crf  systick_timer.crf  uart.d  uni_flash.crf
SVN_ILIA_BRANCH/MASTER/: JLinkLog.txt  lightControl-DESKTOP-JA61J2Q-2.uvoptx  lightControl-DESKTOP-JA61J2Q-2.uvprojx  lightControl-DESKTOP-JA61J2Q.uvoptx  lightControl.uvguix.Haritonenko  lightControl.uvguix.Iahve  lightControl.uvguix.ilia1  lightControl.uvoptx.mine  lightControl.uvprojx.mine  lightControl.uvprojx.r101
SVN_ILIA_BRANCH/SLAVE/: lightControl-DESKTOP-JA61J2Q.uvprojx  lightControl.uvguix.Haritonenko  lightControl.uvguix.Iahve  lightControl.uvoptx  lightControl.uvoptx.mine  lightControl.uvoptx.r91  lightControl.uvprojx.mine
SVN_ILIA_BRANCH/commonLibs/: rf_parser.c  rf_parser.c.r104
Schematics/SynchroLightMaster_V2/: Adapter.SchDoc  LCD_SD.SchDoc  MCU.SchDoc  Power.SchDoc  RS485_USB.SchDoc  SynchroLightMaster_V2.PrjPcb  SynchroLightMaster_V2.PrjPcbStructure  Transceiver.SchDoc
Schematics/SynchroLightSlave_V2/: Adapter.$$$  Adapter.SchDoc  LCD_SD.SchDoc  MCU.SchDoc  Power.SchDoc  RS485_USB.SchDoc  SynchroLightSlave_V2.OutJob  SynchroLightSlave_V2.PrjPcb  Transceiver.SchDoc
Src/: buttons.c  display_kingbright.c  display_kingbright_74hc.c  low_level0.c  low_level0_master.c  low_level0_master_v2.c  low_level0_slave.c  main.c
SyncLight/SLAVE/: lightControl.uvoptx  (+9 more)
commonLibs/: display_kingbright.c  display_kingbright.h  display_menu-DESKTOP-JA61J2Q.c  display_menu.c  display_menu.c.mine  display_menu.c.r96  display_menu.h  rf_parser.c  rf_parser.h  uint_converter.h
fatfs/: fatfs_diskio_sdcard_spi.c
mcu_bootloader/: bootloader.uvguix.Dizarker  bootloader.uvguix_Haritonenko.bak  bootloader.uvoptx  bootloader.uvprojx  bootloader_uvoptx.bak  bootloader_uvprojx.bak  tests.c  tests.h
temp/: LPT_Controller_Pixel.pcb  screen_split.pcb
unilib/: adc_base.c  dprintf.c  dprintf.h  fifo.h  gps.h  pid.c  srtm_reader_alt.c  static_assert.h
(+658 files in other folders)
